# OCCTSketcher

./: .gitignore  CMakeLists.txt  Geom2d_Arc.cpp  Geom2d_Arc.h  OCCTSketcher.pro  OCCTSketcher.pro.user.af47dfd.4.8-pre1  OCCView.cpp  OCCView.h  README.md  Sketcher.cpp  Sketcher.h  Sketcher_AnalyserSnap.cpp  Sketcher_AnalyserSnap.h  Sketcher_Command.cpp  Sketcher_Command.h  Sketcher_CommandArc3P.cpp  Sketcher_CommandArcCenter2P.cpp  Sketcher_CommandArcCenter2P.h  Sketcher_CommandBezierCurve.cpp  Sketcher_CommandBezierCurve.h  Sketcher_CommandCircle2PTan.cpp  Sketcher_CommandCircle2PTan.h  Sketcher_CommandCircle3P.cpp  Sketcher_CommandCircle3Tan.cpp  Sketcher_CommandCircleCenterRadius.cpp  Sketcher_CommandCircleCenterRadius.h  Sketcher_CommandCircleP2Tan.cpp  Sketcher_CommandCircleP2Tan.h  Sketcher_CommandLine2P.cpp  Sketcher_CommandLine2P.h  Sketcher_CommandPoint.cpp  Sketcher_CommandPoint.h  Sketcher_CommandTrim.cpp  Sketcher_CommandTrim.h  Sketcher_GUI.cpp  Sketcher_Object.h  Sketcher_ObjectGeometryType.h  Sketcher_ObjectType.h  Sketcher_Snap.cpp  Sketcher_Snap.h  (+17 more)
src/: OCCTSketcher.pro  OCCView.cpp  OCCView.h  README.md  Sketcher.cpp  Sketcher.h  Sketcher_AnalyserSnap.h  Sketcher_Command.cpp  Sketcher_Command.h  Sketcher_CommandArc3P.cpp  Sketcher_CommandArc3P.h  Sketcher_CommandArcCenter2P.cpp  Sketcher_CommandArcCenter2P.h  Sketcher_CommandBezierCurve.h  Sketcher_CommandCircle2PTan.cpp  Sketcher_CommandCircle2PTan.h  Sketcher_CommandCircle3P.h  Sketcher_CommandCircle3Tan.cpp  Sketcher_CommandCircle3Tan.h  Sketcher_CommandCircleCenterRadius.cpp  Sketcher_CommandCircleCenterRadius.h  Sketcher_CommandCircleP2Tan.cpp  Sketcher_CommandCircleP2Tan.h  Sketcher_CommandLine2P.cpp  Sketcher_CommandLine2P.h  Sketcher_CommandPoint.cpp  Sketcher_CommandPoint.h  Sketcher_CommandTrim.cpp  Sketcher_CommandTrim.h  Sketcher_GUI.h  Sketcher_Object.cpp  Sketcher_ObjectType.h  Sketcher_ObjectTypeOfMethod.h  Sketcher_Property.cpp  Sketcher_Property.h  Sketcher_PropertyArc.cpp  Sketcher_PropertyArc.h  Sketcher_PropertyCircle.cpp  Sketcher_PropertyCircle.h  Sketcher_PropertyLine.cpp  (+22 more)
